--- a/src/styles/css/products.module.css
+++ b/src/styles/css/products.module.css
@@ -1,4 +1,92 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&family=Sofia+Sans:wght@300;500;700&display=swap");
-.ba {
-  color: red;
+.products {
+  width: 100%;
+  padding: 25px 22px;
+}
+
+.list {
+  margin-top: 24px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.product {
+  background: #212123;
+  border-radius: 10px;
+  overflow: hidden;
+  width: calc(25% - 20px);
+}
+
+.image {
+  width: 100%;
+  height: 410px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.wrapper {
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 410px);
+}
+
+.title {
+  font-weight: 600;
+  font-size: 15px;
+  line-height: 18px;
+}
+
+.cat {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  color: #b8b8b8;
+  text-transform: uppercase;
+  margin-top: 5px;
+  margin-bottom: 18px;
+}
+
+.info {
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.prices {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
+}
+
+.price {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #6c3eb8;
+  margin-left: 10px;
+}
+
+.oldPrice {
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 16px;
+  text-decoration-line: line-through;
+  color: #576067;
+}
+
+.purchases {
+  color: #576067;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 12px;
+}
+
+.button {
+  margin-top: 24px;
+  text-align: center;
 }/*# sourceMappingURL=products.module.css.map */
