--- a/src/styles/products/products.module.scss
+++ b/src/styles/products/products.module.scss
@@ -1,5 +1,93 @@
 @use "../variables" as *;
 
-.ba{
-    color: red;
-}
+
+.products {
+    width: 100%;
+    padding: 25px 22px;
+  }
+
+  .list {
+    margin-top: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  .product {
+    background: $bg;
+    border-radius: 10px;
+    overflow: hidden;
+    width: calc(100%/4 - 20px);
+  }
+
+  .image {
+    width: 100%;
+    height: 410px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .wrapper {
+    padding: 12px;
+    display: flex;
+    flex-direction: column;
+    height: calc(100% - 410px);
+  }
+
+  .title {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+  }
+
+  .cat {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    color: $grey;
+    text-transform: uppercase;
+    margin-top: 5px;
+    margin-bottom: 18px;
+  }
+
+  .info {
+    margin-top: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .prices {
+    display: flex;
+    align-items: center;
+    column-gap: 5px;
+  }
+
+  .price {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    color: $violet-dark;
+    margin-left: 10px;
+  }
+
+  .oldPrice {
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 16px;
+    text-decoration-line: line-through;
+    color: $dark-sea;
+  }
+
+  .purchases {
+    color: $dark-sea;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 12px;
+  }
+
+  .button {
+    margin-top: 24px;
+    text-align: center;
+  }
