--- a/src/styles/categories/categories.module.scss
+++ b/src/styles/categories/categories.module.scss
@@ -1,10 +1,19 @@
 @use "../variables" as *;
 
+
+.section{
+    margin-block: 15px;
+    padding: 10px;
+    h2{
+        font-size: 30px;
+    }
+}
 .list{
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
     gap: 20px;
+    margin-top: 20px;
 }
 
 .item{
@@ -21,4 +30,9 @@
     background-repeat: no-repeat;
     background-size: cover;
     gap: 20px;
+    background-size: 100%;
+    transition: background-size 0.25s ease;
+    &:hover{
+        background-size: 110%;
+    }
 }
