--- a/src/styles/css/categories.module.css
+++ b/src/styles/css/categories.module.css
@@ -1,9 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&family=Sofia+Sans:wght@300;500;700&display=swap");
+.section {
+  margin-block: 15px;
+  padding: 10px;
+}
+.section h2 {
+  font-size: 30px;
+}
+
 .list {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
   gap: 20px;
+  margin-top: 20px;
 }
 
 .item {
@@ -20,4 +29,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   gap: 20px;
+  background-size: 100%;
+  transition: background-size 0.25s ease;
+}
+.image:hover {
+  background-size: 110%;
 }/*# sourceMappingURL=categories.module.css.map */
