add Single product Card

--- a/src/styles/categories/categories.module.scss
+++ b/src/styles/categories/categories.module.scss
@@ -4,6 +4,7 @@
 .section{
     margin-block: 15px;
     padding: 10px;
+    font-family: $font-family-main;
     h2{
         font-size: 30px;
     }
