--- a/src/styles/css/footer.module.css
+++ b/src/styles/css/footer.module.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&family=Sofia+Sans:wght@300;500;700&display=swap");
 .footer {
+  font-family: "Montserrat", sans-serif;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
