--- a/src/styles/css/sideBar.module.css
+++ b/src/styles/css/sideBar.module.css
@@ -5,6 +5,7 @@
   height: 505px;
   display: flex;
   flex-direction: column;
+  font-family: "Montserrat", sans-serif;
 }
 .sidebar .title {
   font-weight: 600;
@@ -22,6 +23,7 @@
   font-size: 20px;
   line-height: 17px;
   text-transform: capitalize;
+  transition: all 0.1s ease;
 }
 
 .link:hover {
@@ -36,6 +38,5 @@
   margin-top: auto;
   display: flex;
   flex-direction: column;
-  line-height: 1.5;
-  justify-content: space-between;
+  gap: 5px;
 }/*# sourceMappingURL=sideBar.module.css.map */
