--- a/src/styles/sideBar/sideBar.module.scss
+++ b/src/styles/sideBar/sideBar.module.scss
@@ -6,6 +6,7 @@
     height: 505px;
     display: flex;
     flex-direction: column;
+    font-family: $font-family-main;
 
     .title {
         font-weight: 600;
@@ -25,6 +26,7 @@
     font-size: 20px;
     line-height: 17px;
     text-transform: capitalize;
+    transition: all 0.1s ease;
   }
   
   .link:hover {
@@ -39,6 +41,5 @@
     margin-top: auto;
     display: flex;
     flex-direction: column;
-    line-height: 1.5;
-    justify-content: space-between;
+    gap: 5px;
   }
