--- a/src/styles/css/product.module.css
+++ b/src/styles/css/product.module.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&family=Sofia+Sans:wght@300;500;700&display=swap");
 .product {
   display: flex;
+  min-height: 620px;
 }
 
 .images {
