--- a/src/styles/css/header.module.css
+++ b/src/styles/css/header.module.css
@@ -83,18 +83,37 @@
        column-gap: 20px;
 }
 
-.favourites {
-  cursor: pointer;
-}
-
 .account svg {
   width: 24px;
   height: 24px;
 }
 
+.favourites {
+  cursor: pointer;
+  position: relative;
+}
+
 .icon-fav {
   stroke: #b8b8b8;
   fill: none;
+  z-index: 1;
+}
+
+.fav-count {
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  background: #8b57c6;
+  right: -2px;
+  bottom: -2px;
+  border-radius: 50%;
+  z-index: 2;
+  font-size: 10px;
+  font-weight: 700;
+  justify-content: center;
+  text-align: center;
+  color: #f6f6f7;
+  line-height: 16px;
 }
 
 .icon-cart {
