--- a/src/styles/header/header.module.scss
+++ b/src/styles/header/header.module.scss
@@ -82,20 +82,40 @@
     column-gap: 20px;
   }
   
-  .favourites {
-    cursor: pointer;
-  }
+  
   
   .account svg {
     width: 24px;
     height: 24px;
   }
-  
+
+  .favourites {
+    cursor: pointer;
+    position: relative;
+  }
+
   .icon-fav {
     stroke: $grey;
     fill: none;
+    z-index: 1;
   }
-  
+  .fav-count{
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    background: $violet;
+    right: -2px;
+    bottom: -2px;
+    border-radius: 50%;
+    z-index: 2;
+    font-size: 10px;
+    font-weight: 700;
+    justify-content: center;
+    text-align: center;
+    color: $light;
+    line-height: 16px;
+  }
+
   .icon-cart {
     fill: $grey;
   }
