--- a/src/styles/user/user.module.scss
+++ b/src/styles/user/user.module.scss
@@ -77,6 +77,7 @@
     color: $dark-sea;
     cursor: pointer;
     text-align: center;
+    text-decoration: underline;
     &:hover{
         color: $light;
     }
